--- a/main_file.bib
+++ b/main_file.bib
@@ -1,3 +1,17 @@
+@techreport{LAASreport,
+  TITLE = {{Polyhedral results and valid inequalities for the Continuous Energy-Constrained Scheduling Problem}},
+  AUTHOR = {Nattaf, Margaux and Kis, Tam{\'a}s and Artigues, Christian and Lopez, Pierre},
+  URL = {https://hal.archives-ouvertes.fr/hal-01391403},
+  TYPE = {Research Report},
+  INSTITUTION = {{laas - cnrs}},
+  YEAR = {2016},
+  MONTH = Nov,
+  KEYWORDS = {continuous scheduling ; continuous resources ; linear efficiency functions ; mixed-integer programming ; valid inequalities ; polyhedral combinatorics},
+  PDF = {https://hal.archives-ouvertes.fr/hal-01391403/file/rapport_LAAS.pdf},
+  HAL_ID = {hal-01391403},
+  HAL_VERSION = {v1},
+}
+
 @article{min_dom,
 title = "Increasing tree search efficiency for constraint satisfaction problems",
 journal = "Artificial Intelligence",
