--- a/part3/CECSP/amelioration_modele.tex
+++ b/part3/CECSP/amelioration_modele.tex
@@ -30,10 +30,12 @@ affectations possibles des variables binaires pour une seule activité,
 pour lequel nous exhibons un ensemble minimal d'inégalités permettant
 de le décrire. De plus, plusieurs ensembles d'inégalités valides sont
 proposées pour contribuer à l'amélioration des performances des
-modèles à événements.
+modèles à événements. Les améliorations apportées à ces modèles ont
+été faites en collaboration avec Tam{\'a}s Kis~\cite{LAASreport}.
  
 \subsection{Amélioration des modèles indexés par le temps}
 \label{sec:ER_TI}
+
 Dans cette sous-section, nous montrons comment est utilisé le
 raisonnement énergétique décrit à la section~\ref{sec:ER_CECSP} pour
 exhiber des inégalités valides pour les modèles de programmation
@@ -192,7 +194,8 @@ on/off, puis nous présentons un ensemble d'inégalités que nous pouvons
 rajouter au modèle on/off pour renforcer sa relaxation. Cet ensemble
 d'inégalités est ensuite utilisé pour donner une description minimale
 du polyèdre défini par l'ensemble de toutes les affectations possibles
-des variables binaires $z_{ie}$ pour une seule activité. 
+des variables binaires $z_{ie}$ pour une seule
+activité~\cite{LAASreport}.  
 
 D'autres ensembles d'inégalités, permettant l'ajout de nouvelles
 contraintes au modèle, sont ensuite présentées, la suppression des
@@ -286,10 +289,11 @@ suivant.
 
 \subsubsection{Inégalités de non préemption}
 \label{sec:nonPreem}
+
 Dans ce paragraphe, nous présentons un ensemble d'inégalités que nous
 utilisons pour donner une description minimale du polyèdre défini par
 l'ensemble de toutes les affectations possibles des variables binaires
-$z_{ie}$ pour une seule activité. 
+$z_{ie}$ pour une seule activité~\cite{LAASreport}. 
 
 L'ensemble d'inégalités, appelées inégalités de non préemption, est
 défini comme suit. Puisque, dans tout ordonnancement réalisable,
