--- a/part3/PLNE.tex
+++ b/part3/PLNE.tex
@@ -58,8 +58,9 @@
       sac-à-dos. De plus, des coupes appelées inégalités de
       non-préemption sont définies et une étude polyédrale de
       l'ensemble des vecteurs binaires solution d'un des modèles
-      présenté est détaillée. Ces résultats ont été présentés 
-      dans~\cite{Nattaf_ROADEF16,Nattaf_ECCO16}. }
+      présenté est détaillée. Ces résultats ont été mis en place en
+      collaboration avec Tam{\'a}s Kis et ont été présentés 
+      dans~\cite{Nattaf_ROADEF16,Nattaf_ECCO16,LAASreport}. }
     \vspace{0.5cm}
     \hrule
   \end{minipage}
